--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "component-library",
+  "name": "shared-config",
   "version": "1.0.0",
   "description": "> TODO: description",
   "author": "quirimmo <quirimmo@gmail.com>",
   "homepage": "https://github.com/quirimmo/react-monorepos-boilerplate#readme",
   "license": "MIT",
-  "main": "lib/component-library.js",
+  "main": "lib/shared-config.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -21,7 +21,7 @@
     "url": "git+https://github.com/quirimmo/react-monorepos-boilerplate.git"
   },
   "scripts": {
-    "start": "echo \"Hello World From Component Library\""
+    "start": "echo \"Hello from shared config\""
   },
   "bugs": {
     "url": "https://github.com/quirimmo/react-monorepos-boilerplate/issues"
