--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/quirimmo/react-monorepos-boilerplate.git"
+    "url": "git+https://quirimmo@github.com/quirimmo/react-monorepos-boilerplate.git"
   },
   "scripts": {
     "start": "echo \"Hello from shared config\""
