Commit pending changes

--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "main": "lib/shared-config.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
