--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "start": "node \"./lib/component-library.js\"",
     "storybook": "start-storybook --debug-webpack",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "build:types": "tsc --emitDeclarationOnly"
   },
   "bugs": {
     "url": "https://github.com/quirimmo/react-monorepos-boilerplate/issues"
@@ -49,6 +50,7 @@
     "shared-config": "^1.0.4",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.2.0",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
