--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build/lib",
+    "outDir": "dist",
     "module": "commonjs",
     "target": "es5",
     "lib": [
@@ -17,7 +17,7 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
@@ -26,7 +26,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "declaration": true,
+    "declaration": true
   },
   "include": [
     "lib/**/*"
