--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -5,7 +5,7 @@
   "author": "quirimmo <quirimmo@gmail.com>",
   "homepage": "https://github.com/quirimmo/react-monorepos-boilerplate#readme",
   "license": "MIT",
-  "main": "lib/component-library.js",
+  "main": "lib/index.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -21,7 +21,7 @@
     "url": "git+https://github.com/quirimmo/react-monorepos-boilerplate.git"
   },
   "scripts": {
-    "start": "node \"./lib/component-library.js\"",
+    "start": "yarn storybook",
     "storybook": "start-storybook --debug-webpack",
     "build": "webpack --config webpack.config.js",
     "build:types": "tsc --emitDeclarationOnly"
