--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
       "packages/*"
     ],
     "nohoist": [
+      "**/webpack",
+      "**/webpack/**",
       "**/react-scripts",
       "**/react-scripts/**"
     ]
