--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -45,6 +45,7 @@
     "@types/storybook__addon-info": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "jest": "^24.9.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "shared-config": "^1.0.4",
