linking dist as publish config directory

--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -14,7 +14,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
+    "registry": "https://registry.yarnpkg.com",
+    "directory": "dist"
   },
   "repository": {
     "type": "git",
