--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": ".",
     "outDir": "dist",
     "module": "commonjs",
     "target": "es5",
@@ -26,7 +25,8 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "declarationDir": "./dist"
   },
   "include": [
     "lib/**/*"
@@ -34,6 +34,7 @@
   "exclude": [
     "node_modules",
     "build",
-    "scripts"
+    "scripts",
+    "dist"
   ]
 }
