--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "commonjs",
-    "target": "es5",
+    // "module": "commonjs",
+    // "target": "es5",
     "lib": [
       "es5",
       "es6",
@@ -12,7 +12,7 @@
     ],
     "allowJs": false,
     "jsx": "react",
-    "moduleResolution": "node",
+    // "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
