--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -51,7 +51,8 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "react": "^16.12.0",
