--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    // "module": "commonjs",
-    // "target": "es5",
+    "outDir": "./dist",
+    "module": "esnext",
+    "target": "es5",
     "lib": [
       "es5",
       "es6",
@@ -12,7 +12,9 @@
     ],
     "allowJs": false,
     "jsx": "react",
-    // "moduleResolution": "node",
+    "declaration": true,
+    "declarationDir": "./dist",
+    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -24,9 +26,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "sourceMap": true,
-    "declaration": true,
-    "declarationDir": "./dist"
+    "sourceMap": true
   },
   "include": [
     "lib/**/*"
