--- a/packages/main-app/package.json
+++ b/packages/main-app/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^3.7.0"
+    "@types/cypress-cucumber-preprocessor": "^1.14.0",
+    "cypress": "^3.7.0",
+    "cypress-cucumber-preprocessor": "^1.17.0"
   }
 }
