--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -37,6 +37,7 @@
     "@storybook/addon-info": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "@types/jest": "^24.0.23",
+    "@types/material-ui": "^0.21.7",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/storybook__addon-info": "^5.2.1",
@@ -55,6 +56,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
