--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-library",
-  "version": "1.0.9",
+  "version": "2.0.0-alpha.0",
   "description": "> TODO: description",
   "author": "quirimmo <quirimmo@gmail.com>",
   "homepage": "https://github.com/quirimmo/react-monorepos-boilerplate#readme",
