--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-library",
-  "version": "2.0.0-alpha.0",
+  "version": "3.0.0-alpha.0",
   "description": "> TODO: description",
   "author": "quirimmo <quirimmo@gmail.com>",
   "homepage": "https://github.com/quirimmo/react-monorepos-boilerplate#readme",
@@ -49,7 +49,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "jest": "^24.9.0",
     "react-docgen-typescript-loader": "^3.6.0",
-    "shared-config": "^1.0.4",
+    "shared-config": "^2.0.0-alpha.0",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
