--- a/packages/shared-config/package.json
+++ b/packages/shared-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shared-config",
-  "version": "1.0.4",
+  "version": "2.0.0-alpha.0",
   "description": "> TODO: description",
   "author": "quirimmo <quirimmo@gmail.com>",
   "homepage": "https://github.com/quirimmo/react-monorepos-boilerplate#readme",
