--- a/packages/main-app/package.json
+++ b/packages/main-app/package.json
@@ -1,13 +1,13 @@
 {
   "name": "main-app",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0-3.0.0-alpha.2.0",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
-    "component-library": "^3.0.0-alpha.0",
+    "component-library": "^4.0.0-alpha.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
