--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-monorepos-boilerplate",
+  "name": "@alpha/react-monorepos-boilerplate",
   "private": true,
   "devDependencies": {
     "husky": "^3.1.0",
