--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-library",
+  "name": "@alpha/test-component-library",
   "version": "4.0.0-alpha.0",
   "description": "> TODO: description",
   "author": "quirimmo <quirimmo@gmail.com>",
@@ -11,10 +11,11 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com",
+    "registry": "https://binrepo.cglcloud.in/api/npm/npm-virtual/",
     "directory": "dist"
   },
   "repository": {
@@ -49,7 +50,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "jest": "^24.9.0",
     "react-docgen-typescript-loader": "^3.6.0",
-    "shared-config": "^3.0.0-alpha.0",
+    "@alpha/test-shared-config": "^3.0.0-alpha.0",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
