working on composite

--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -26,7 +26,8 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "composite": true
   },
   "include": [
     "lib/**/*"
