--- a/packages/main-app/package.json
+++ b/packages/main-app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@alpha/test-main-app",
-  "version": "4.0.0-0",
+  "version": "5.0.0-alpha.0",
   "private": true,
   "dependencies": {
-    "@alpha/test-component-library": "^5.0.0-alpha.0",
+    "@alpha/test-component-library": "^6.0.0-alpha.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
